# jaffle-shop-demo

./: .gitignore  COMMANDS.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  setup.sh
models/warehouse/: dim_customer.sql  dim_products.sql  fact_customer_order_monthly.sql  fact_orders.sql
